# mentat

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mentat.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: models.json
docs/: README.md  architecture.md  commands.md  configuration.md  contributing.md  database.md  enhanced_chat.md  examples.md  installation.md  temporal-search.md  tools.md
mentat/api/: enhanced_chat_service.py
mentat/chat/: enhanced_chat.py  mentat_voice_session.py  prompts.py  session_store.py  temporal.py  voice_prompts.py  voice_tool_handlers.py
mentat/chat/tools/: __init__.py  base.py  file_utils.py  (+6 more)
mentat/cli/: commands.py  config_command.py  display.py  mentat.py  voice_command.py
mentat/concepts/: concept_display.py  concept_explorer.py  concept_integration.py
mentat/core/: ai.py  config.py  database.py  llm.py  markdown_export.py  model_discovery.py  private_files.py  prompts.py  utils.py
mentat/voice_ui/: view.py
tests/: test_ai_core.py  test_apple_notes.py  test_chat_context.py  test_chat_retrieval_config.py  test_cli_commands.py  test_cli_display.py  test_cli_model_display.py  test_cli_view_helpers.py  test_cli_view_rendering.py  test_concept_exploration.py  test_config_command.py  test_core_prompts.py  test_cross_content.py  test_database_timeframe.py  test_enhanced_chat.py  test_entity_extraction.py  test_intent_detection.py  test_llm_routing.py  test_llm_wrapper.py  test_markdown_export.py  test_private_files.py  test_project_fix.py  test_references.py  test_runtime_model_settings.py  test_search.py  test_semantic_search.py  test_session_store.py  test_specific_url.py  test_sqlite.py  test_static_analysis.py  test_temporal.py  test_todo_analysis.py  test_tool_capture.py  test_tool_tiers.py  test_utils.py  test_voice_integration.py  test_voice_view.py
